# sidra-forecasting

./: .gitignore  README.md  business_data_2007_2020.json  business_data_2021_2022.json  figs.py  hello.py  main.py  model_performance.csv  pyproject.toml
report/: main.tex
src/: fetching.py  plots.py  preprocess.py  training.py  validation.py
